--- a/resources/js/pages/components/styles.css
+++ b/resources/js/pages/components/styles.css
@@ -17,3 +17,28 @@
     width: 100%;
   }
   
+
+  .gradient-background{
+    width: 100%;
+    height: 400px;
+    /* background: linear-gradient(to top ,red, black );  */
+    background: linear-gradient(to top, rgba(255, 0, 0, 0.726), rgb(0, 0, 0)70%); 
+    background-size: cover;
+    background-blend-mode: overlay; 
+  }
+
+  .form-container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: rgba(0, 0, 0, 0.5); /* Dark semi-transparent background */
+    border-radius: 10px;
+    padding: 30px;
+    backdrop-filter: blur(10px); /* Apply blur effect */
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); /* Optional: for some shadow */
+}
+.form-control:focus{
+    border-color: #ff0000;
+    box-shadow: 0 0 0 0.2rem rgba(255, 0, 0, 0.1);
+}
